# word-clique

./: .gitignore  README.md  conda.yml  setup.cfg  setup.py  words_alpha_unique.txt  words_simple.txt
