[metadata]
name = word-clique
version = 1.0
author = Ton Hospel
author_email = word-clique@ton.iguana.be
description = Find five five-letter words with twenty-five unique letters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thospel/word-clique
classifiers =
    Topic :: Games/Entertainment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
#package_dir =
#    = lib
packages = find:
python_requires = >=3.10
scripts =
    bin/word-clique
install_requires =
    docopt
    rich
    types-setuptools
[options.extras_require]
    dev=
        sphinx
        mypy
        autoflake
        safety
        # jupyter
        # ipython

[options.packages.find]
where = lib

[options.data_files]
# Maybe rethink this. It will also install docs into the environment
# Is there a setting to distribute without install ?
.=
   wordle-allowed-guesses.txt
   wordle-answers-alphabetical.txt
   wordle.txt
   words.txt
   words_alpha.txt
   words_alpha_unique.txt
[mypy]
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores  = True
# disallow_any_unimported = True
# disallow_any_expr = True
disallow_any_decorated = True
# disallow_any_explicit = True
# disallow_any_generics = True
disallow_subclassing_any = True
# disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
# strict = True
